# ChangeLog for media-sound/tepsonic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tepsonic-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +tepsonic-9999.ebuild,
  +metadata.xml:
  Initial ebuild
