@@ -1,3 +1,5 @@
+DIST tepsonic-0.97.0-src.tar.gz 679342 RMD160 8c490ee140608383db38dc75a69226e302a4a181 SHA1 9b96aff4f229d6414ad1ee8ab86ce837564267d3 SHA256 92b0b56eff81eff83f4fbae99069a56ef0139c8b93f455e665326b85b0f01d81
+EBUILD tepsonic-0.97.0.ebuild 997 RMD160 b081e3768b06800a37387d55935d28550f65b5ab SHA1 9ef20bc8abe51b8b5ea0cdb79beea7263bf59ffb SHA256 d6c3b4fc029e697076cf3877b69f010cca7247857b58ce5031bbe0b341770d93
 EBUILD tepsonic-9999.ebuild 974 RMD160 87d6209bad2afecc98760c83e6347198eea0d1bf SHA1 09e36388b24a70c9fbb9eb04065dfa9d2770a232 SHA256 4d444935568348e9d302830dc54d0a918bb267969d14e20dd44266ab036384f1
 MISC ChangeLog 252 RMD160 5ced0c379eddbce229aad5ac9e3b995c350a48e2 SHA1 005467cb646f63bf06a3ca0d43bbf4ad3247461c SHA256 5fc10b34dd083d53ca8621545f8997d52a7ea474e72ad45777ec62ae70e04967
 MISC metadata.xml 508 RMD160 e34e582bba2bda4665a9973dd8cc44addb4bb163 SHA1 5da6cb90fff5b2f26c77bb27832e29a2ae3752f2 SHA256 78e600ad12a449d46b94359732bacd7aabb4830495345e3ab204cfec21617816
