@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tepsonic-0.97.0 (18 Jun 2010)
+
+  18 Jun 2010; Nikoli <nikoli@lavabit.com> +tepsonic-0.97.0.ebuild:
+  version bump
+
 *tepsonic-9999 (10 Jun 2010)
 
   10 Jun 2010; Nikoli <nikoli@lavabit.com> +tepsonic-9999.ebuild,
